// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Packaging (Read & Write) can be selected from the prompt 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ Packaging (Read)
│  ● Packaging (Read & Write) (Create, read, update and delete packages)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read & Write)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`all prompts successful 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`complete non-default prompt flow selects read-write scope and forced acquisition 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ Packaging (Read)
│  ● Packaging (Read & Write) (Create, read, update and delete packages)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read & Write)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ no
│  ● yes (Only use this if the authentication fails without force token 
│  acquisition.)
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  yes
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read & Write), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`configuration without a registry can be corrected before successful completion 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./c█
│  ./co█
│  ./con█
│  ./conf█
│  ./confi█
│  ./config█
│  ./config-█
│  ./config-w█
│  ./config-wi█
│  ./config-wit█
│  ./config-with█
│  ./config-witho█
│  ./config-withou█
│  ./config-without█
│  ./config-without-█
│  ./config-without-r█
│  ./config-without-re█
│  ./config-without-reg█
│  ./config-without-regi█
│  ./config-without-regis█
│  ./config-without-regist█
│  ./config-without-registr█
│  ./config-without-registry█
│  ./config-without-registry/█
│  ./config-without-registry/.█
│  ./config-without-registry/.n█
│  ./config-without-registry/.np█
│  ./config-without-registry/.npm█
│  ./config-without-registry/.npmr█
│  ./config-without-registry/.npmrc█
▲  Where is the NPM configuration file?
│  ./config-without-registry/.npmrc█
└  No registry entry found in the NPM configuration file
◆  Where is the NPM configuration file?
│  ./.npmrc
└
│  .█
│  ./█
│  ./v█
│  ./va█
│  ./val█
│  ./vali█
│  ./valid█
│  ./valid-█
│  ./valid-c█
│  ./valid-co█
│  ./valid-con█
│  ./valid-conf█
│  ./valid-confi█
│  ./valid-config█
│  ./valid-config/█
│  ./valid-config/.█
│  ./valid-config/.n█
│  ./valid-config/.np█
│  ./valid-config/.npm█
│  ./valid-config/.npmr█
│  ./valid-config/.npmrc█
◇  Where is the NPM configuration file?
│  ./valid-config/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`default command 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`force token acquisition select prompt cancelled 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
■  Force token acquisition?
│  no
│
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`forced acquisition can be selected from the prompt 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
│  ○ no
│  ● yes (Only use this if the authentication fails without force token 
│  acquisition.)
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  yes
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: yes)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`invalid configuration path can be corrected before successful completion 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-d█
│  ./this-dir-do█
│  ./this-dir-doe█
│  ./this-dir-does█
│  ./this-dir-does-█
│  ./this-dir-does-n█
│  ./this-dir-does-no█
│  ./this-dir-does-not█
│  ./this-dir-does-not-█
│  ./this-dir-does-not-e█
│  ./this-dir-does-not-ex█
│  ./this-dir-does-not-exi█
│  ./this-dir-does-not-exis█
│  ./this-dir-does-not-exist█
│  ./this-dir-does-not-exist-█
│  ./this-dir-does-not-exist-i█
│  ./this-dir-does-not-exist-in█
│  ./this-dir-does-not-exist-in-█
│  ./this-dir-does-not-exist-in-m█
│  ./this-dir-does-not-exist-in-me█
│  ./this-dir-does-not-exist-in-mem█
│  ./this-dir-does-not-exist-in-memf█
│  ./this-dir-does-not-exist-in-memfs█
│  ./this-dir-does-not-exist-in-memfs/█
│  ./this-dir-does-not-exist-in-memfs/.█
│  ./this-dir-does-not-exist-in-memfs/.n█
│  ./this-dir-does-not-exist-in-memfs/.np█
│  ./this-dir-does-not-exist-in-memfs/.npm█
│  ./this-dir-does-not-exist-in-memfs/.npmr█
│  ./this-dir-does-not-exist-in-memfs/.npmrc█
▲  Where is the NPM configuration file?
│  ./this-dir-does-not-exist-in-memfs/.npmrc█
└  NPM configuration file not found. Is the filepath correct?
◆  Where is the NPM configuration file?
│  ./.npmrc
└
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`npm configuration path - initial value 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
◇  Where is the NPM configuration file?
│  ./.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
◇  What kind scope should be used for the auth token?
│  Packaging (Read)
│
◆  Force token acquisition?
│  ● no
│  ○ yes
│  ↑/↓ to navigate • Enter: confirm
└
◇  Force token acquisition?
│  no
│
●  Attempting to authenticate with the Azure DevOps NPM registry at https://pkgs.dev.azure.com/org/_packaging/feed/npm/registry/ (scope: Packaging (Read), force: no)
│
●  Credentials will be saved to the user's NPM configuration file at ~/.npmrc
│
◇  Authentication attempt finished
│
●  New credentials were successfully obtained and written to the user's NPM configuration file
│
◆  Authentication with Azure DevOps NPM registry completed successfully 😊
│
└  📦🔑 Thanks for using vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑"
`;

exports[`npm configuration path - prompt validation - file does not exist 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-d█
│  ./this-dir-do█
│  ./this-dir-doe█
│  ./this-dir-does█
│  ./this-dir-does-█
│  ./this-dir-does-n█
│  ./this-dir-does-no█
│  ./this-dir-does-not█
│  ./this-dir-does-not-█
│  ./this-dir-does-not-e█
│  ./this-dir-does-not-ex█
│  ./this-dir-does-not-exi█
│  ./this-dir-does-not-exis█
│  ./this-dir-does-not-exist█
│  ./this-dir-does-not-exist-█
│  ./this-dir-does-not-exist-i█
│  ./this-dir-does-not-exist-in█
│  ./this-dir-does-not-exist-in-█
│  ./this-dir-does-not-exist-in-m█
│  ./this-dir-does-not-exist-in-me█
│  ./this-dir-does-not-exist-in-mem█
│  ./this-dir-does-not-exist-in-memf█
│  ./this-dir-does-not-exist-in-memfs█
│  ./this-dir-does-not-exist-in-memfs/█
│  ./this-dir-does-not-exist-in-memfs/.█
│  ./this-dir-does-not-exist-in-memfs/.n█
│  ./this-dir-does-not-exist-in-memfs/.np█
│  ./this-dir-does-not-exist-in-memfs/.npm█
│  ./this-dir-does-not-exist-in-memfs/.npmr█
│  ./this-dir-does-not-exist-in-memfs/.npmrc█
▲  Where is the NPM configuration file?
│  ./this-dir-does-not-exist-in-memfs/.npmrc█
└  NPM configuration file not found. Is the filepath correct?
■  Where is the NPM configuration file?
│  ./this-dir-does-not-exist-in-memfs/.npmrc
│
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`npm configuration path - prompt validation - no registry found ('empty registry value') 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
▲  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc█
└  No registry entry found in the NPM configuration file
■  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`npm configuration path - prompt validation - no registry found ('no registry key') 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
▲  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc█
└  No registry entry found in the NPM configuration file
■  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`npm configuration path prompt cancelled 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
■  Where is the NPM configuration file?
│  ./.npmrc
│
└  Operation failed. Exiting - maybe another time? 👋"
`;

exports[`token scope select prompt cancelled 1`] = `
"
┌  📦🔑 Welcome to vsts-npm-auth-improved <PACKAGE_VERSION> 📦🔑
│
◆  Where is the NPM configuration file?
│  ./.npmrc█
└
│  ./.npmrc
│  .█
│  ./█
│  ./t█
│  ./th█
│  ./thi█
│  ./this█
│  ./this-█
│  ./this-d█
│  ./this-di█
│  ./this-dir█
│  ./this-dir-█
│  ./this-dir-e█
│  ./this-dir-ex█
│  ./this-dir-exi█
│  ./this-dir-exis█
│  ./this-dir-exist█
│  ./this-dir-exists█
│  ./this-dir-exists-█
│  ./this-dir-exists-o█
│  ./this-dir-exists-on█
│  ./this-dir-exists-onl█
│  ./this-dir-exists-only█
│  ./this-dir-exists-only-█
│  ./this-dir-exists-only-i█
│  ./this-dir-exists-only-in█
│  ./this-dir-exists-only-in-█
│  ./this-dir-exists-only-in-m█
│  ./this-dir-exists-only-in-me█
│  ./this-dir-exists-only-in-mem█
│  ./this-dir-exists-only-in-memf█
│  ./this-dir-exists-only-in-memfs█
│  ./this-dir-exists-only-in-memfs/█
│  ./this-dir-exists-only-in-memfs/.█
│  ./this-dir-exists-only-in-memfs/.n█
│  ./this-dir-exists-only-in-memfs/.np█
│  ./this-dir-exists-only-in-memfs/.npm█
│  ./this-dir-exists-only-in-memfs/.npmr█
│  ./this-dir-exists-only-in-memfs/.npmrc█
◇  Where is the NPM configuration file?
│  ./this-dir-exists-only-in-memfs/.npmrc
│
◆  What kind scope should be used for the auth token?
│  ● Packaging (Read) (Read packages)
│  ○ Packaging (Read & Write)
│  ↑/↓ to navigate • Enter: confirm
└
■  What kind scope should be used for the auth token?
│  Packaging (Read)
│
└  Operation failed. Exiting - maybe another time? 👋"
`;
